# plugin-pb-python

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  regen.yml  release_pr.yml  unittest.yml
cloudquery/discovery_v1/: discovery_pb2.py  discovery_pb2.pyi  discovery_pb2_grpc.py
cloudquery/plugin_v3/: arrow.py  plugin_pb2.py  plugin_pb2.pyi  plugin_pb2_grpc.py
samples/: plugin_client.py  plugin_server.py
tests/plugin_v3/: arrow.py  arrow_test.py
