[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudquery-plugin-pb"
version = "0.0.54"
description = "CloudQuery Plugin client and server library"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.9"
authors = [
    { name = "CloudQuery LTD", email = "pypi-packages@cloudquery.io" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet",
]
dependencies = [
    "grpcio>=1.56.0",
    "grpcio-tools>=1.56.0",
    "protobuf>=6.30.0",
    "pyarrow>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/cloudquery/plugin-pb-python"

[dependency-groups]
dev = [
    "black>=26.3.1; python_version >= '3.10'",
    "pytest>=9.0.2; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
include = ["cloudquery*"]

[tool.setuptools.package-data]
cloudquery = [
    "plugin_v3/py.typed",
    "plugin_v3/*.pyi",
    "discovery_v1/py.typed",
    "discovery_v1/*.pyi",
]

[tool.uv]
exclude-newer = "1 week"
